--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   name             : "Zhicheng He"
-  pronouns         : # example: "she/her"  
-  bio              : "Undergraduate Student"
+  pronouns         : "he/him"  
+  bio              : "An Undergraduate Student"
   location         : "Nanjing, Jiangsu, China"
   employer         : "Beijing Jiaotong University"
   uri              : # URL
