--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Zhicheng He"
   pronouns         : "he/him"  
-  bio              : "An Undergraduate Student"
+  bio              : "An Undergraduate Student majoring in Computer Science and Technology, Phone: +86 13913888137, Email: 19563133418"
   location         : "Nanjing, Jiangsu, China"
   employer         : "Beijing Jiaotong University"
   uri              : # URL
