--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,14 @@
 # prevent it from being included in the site.
 
 main:
-  # - title: "Publications"
-  #   url: /publications/
+  - title: "Progress"
+    url: /progress/
 
-  # - title: "Talks"
-  #   url: /talks/    
+  - title: "Notes"
+    url: /notes/
 
-  # - title: "Teaching"
-  #   url: /teaching/    
-    
-  # - title: "Portfolio"
-  #   url: /portfolio/
-        
-  # - title: "Blog Posts"
-  #   url: /year-archive/
-    
+  - title: "Publications"
+    url: /publications/
+
   - title: "Details"
     url: /cv/
-    
-  # - title: "Guide"
-  #   url: /markdown/
