--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,12 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/hezhicheng2002"
+  github           : "hezhicheng2002"
+  linkedin         : "zhicheng-he-a1598a377"
+  researchgate     : "https://www.researchgate.net/profile/Zhicheng-He-3?ev=prf_overview"
+  zhihu            : "52hz-20-32-15"
+  csdn             : "https://blog.csdn.net/m0_72020568?spm=1000.2115.3001.5343"
+  wechat_qr        : "/images/wechat_qr.png"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
