Update website: refine bio, add 6 publications from Google Scholar, remove Progress section and CV link

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Zhicheng He"
   pronouns         : "he/him"  
-  bio              : "First-year graduate student in Biomedical Engineering at the National University of Singapore (NUS). Research interests: medical image analysis and multi-modal large language models."
+  bio              : "First-year graduate student in the Department of Biomedical Engineering at the National University of Singapore (NUS).<br>Research interests: medical image analysis and multi-modal large language models."
   location         : "Singapore"
   employer         : "National University of Singapore"
   uri              : # URL
